--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,12 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "headers": [{
+      "source":"**",
+      "headers": [
+        {"key":"Content-Security-Policy","value":"script-src 'self' *.firebaseapp.cpm"}
+      ]
+    }],
     "rewrites": [
       {
         "source": "**",
