--- a/firebase.json
+++ b/firebase.json
@@ -5,12 +5,12 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "headers": [{
-      "source":"**",
-      "headers": [
-        {"key":"Content-Security-Policy","value":"script-src 'self' *.firebaseapp.cpm"}
-      ]
+      ],
+      "headers": [{
+        "source":"**",
+        "headers": [
+          {"key":"Content-Security-Policy","value":"script-src 'self' *.firebaseapp.com *.twitch.tv"}
+        ]
     }],
     "rewrites": [
       {
