--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-share": "^4.4.0",
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4",
